--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -55,7 +55,7 @@ We therefore implemented an ERP camera model using OpenGL geometry shaders that 
 We render \new{three} types of camera paths for ground-truth evaluation \new{at a resolution of 1280$\times$640\,pixels}.
 A \emph{Circle}, in which the camera moves along a 50\,cm radius circle and faces outwards, with images rendered every 10°.
 A \emph{Line}, where the camera faces the same direction and moves in a straight line, with images rendered every 20\,cm.
-\TODO{please check this, Mingze $\to$}
+%\TODO{please check this, Mingze $\to$}
 \new{And \emph{Random}, with camera centres uniformly randomly sampled within a box of 1$\times$1$\times$1\,metres and rotations jittered by $\pm$10° degrees along each of the Euler angle axes.}
 
 
@@ -191,7 +191,7 @@ Our method succeeds where the underlying optical flow method (DIS) fails, while 
 	\caption{\label{tab:exp:oferrorquality}%
 		Optical flow errors on the synthetic Replica 360° dataset.
 		See \cref{sec:datasets-metrics} for metrics.
-		\TODO{Please double-check if Ours is indeed more than 10$\times$ better in SRMS than other methods.}
+		%\TODO{Please double-check if Ours is indeed more than 10$\times$ better in SRMS than other methods.}
 	}
 	\resizebox{0.85\linewidth}{!}{%
 	%	\setlength{\tabcolsep}{3pt}%
@@ -273,51 +273,58 @@ Our method succeeds where the underlying optical flow method (DIS) fails, while 
 
 \begin{figure*}[hbt!]
 	\centering
-	\begin{tabular}{@{}c*{5}{@{\hspace{-9pt}}c}@{}}
-		\labeledfig{images/of_error/office_0_line_1k_0_dis_0002_rgb_pano.jpg}{0.185}{(a) $I_t$}{white} &
-		\labeledfig{images/of_error/office_0_line_1k_0_dis_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(b) DIS}{white} &
-		\labeledfig{images/of_error/office_0_line_1k_0_our_weight_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(c) Ours}{white} &
-		\labeledfig{images/of_error/office_0_line_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(d) PWC-Net}{white} &
-		\labeledfig{images/of_error/office_0_line_1k_0_raft_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(e) RAFT}{white}
+	\begin{tabular}{@{}c*{6}{@{\hspace{-9pt}}c}@{}}
+		\labeledfig{images/of_error/office_0_line_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{white} &
+		\labeledfig{images/of_error/office_0_line_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) DIS}{white} &
+		\labeledfig{images/of_error/office_0_line_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) Ours}{white} &
+		\labeledfig{images/of_error/office_0_line_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) PWC-Net}{white} &
+		\labeledfig{images/of_error/office_0_line_1k_0_raft_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(e) RAFT}{white} &
+		\labeledfig{images/of_error/office_0_line_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(f) OmniFlowNet}{white}
 		\\[-1.0em]
-		\labeledfig{images/of_error/office_0_line_1k_0_gt_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(f) GT}{white} &
-		\labeledfig{images/of_error/office_0_line_1k_0_dis_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(g) DIS (SEPE)}{black} &
-		\labeledfig{images/of_error/office_0_line_1k_0_our_weight_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(h) Ours (SEPE)}{black} &
-		\labeledfig{images/of_error/office_0_line_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(i) PWC-Net (SEPE)}{black} &
-		\labeledfig{images/of_error/office_0_line_1k_0_raft_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(j) RAFT (SEPE)}{black}
+		\labeledfig{images/of_error/office_0_line_1k_0_gt_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(g) GT}{white} &
+		\labeledfig{images/of_error/office_0_line_1k_0_dis_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(h) DIS (SEPE)}{black} &
+		\labeledfig{images/of_error/office_0_line_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(i) Ours (SEPE)}{black} &
+		\labeledfig{images/of_error/office_0_line_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(j) PWC-Net (SEPE)}{black} &
+		\labeledfig{images/of_error/office_0_line_1k_0_raft_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(k) RAFT (SEPE)}{black} &
+		\labeledfig{images/of_error/office_0_line_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(l) OmniFlowNet (SEPE)}{black}
 		\\[-0.9em]
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_0004_rgb_pano.jpg}{0.185}{(a) $I_t$}{white} &
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(b) DIS}{black} &
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_our_weight_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(c) Ours}{black} &
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(d) PWC-Net}{black} &
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_raft_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(e) RAFT}{black}
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{white} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) DIS}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) Ours}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) PWC-Net}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_raft_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(e) RAFT}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(f) OmniFlowNet}{black} 
 		\\[-1.0em]
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_gt_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(f) GT}{black} &
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(g) DIS (SEPE)}{black} &
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_our_weight_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(h) Ours (SEPE)}{black} &
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(i) PWC-Net (SEPE)}{black} &
-		\labeledfig{images/of_error/apartment_0_circ_1k_0_raft_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(j) RAFT (SEPE)}{black}
-		%		\\[-0.9em]
-		%		\labeledfig{images/of_error/room_0_circ_1k_0002_rgb_pano.jpg}{0.185}{(a) $I_t$}{white} &
-		%		\labeledfig{images/of_error/room_0_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(b) $DIS$}{black} &
-		%		\labeledfig{images/of_error/room_0_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(c) $Our$}{black} &
-		%		\labeledfig{images/of_error/room_0_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(d) $PWCNet$}{black} &
-		%		\labeledfig{images/of_error/room_0_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(e) $RAFT$}{black}
-		%		\\[-1.0em]
-		%		\labeledfig{images/of_error/room_0_circ_1k_0_gt_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(f) GT}{black} &
-		%		\labeledfig{images/of_error/room_0_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(g) $DIS\_SEPE$}{black} &
-		%		\labeledfig{images/of_error/room_0_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(h) $Our\_SEPE$}{black} &
-		%		\labeledfig{images/of_error/room_0_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(i) $PWCNet\_SEPE$}{black} &
-		%		\labeledfig{images/of_error/room_0_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_error_vis.jpg}{0.185}{(j) $RAFT\_SEPE$}{black}
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_gt_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(g) GT}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_dis_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(h) DIS (SEPE)}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(i) Ours (SEPE)}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(j) PWC-Net (SEPE)}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_raft_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(k) RAFT (SEPE)}{black} &
+		\labeledfig{images/of_error/apartment_0_circ_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(l) OmniFlowNet (SEPE)}{black}
+		\\[-0.9em]
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_0004_rgb_pano.jpg}{0.165}{(a) $I_t$}{black} &
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_dis_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(b) DIS}{black} &
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(c) Ours}{black} &
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(d) PWC-Net}{black} &
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_raft_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(e) RAFT}{black} &
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(f) OmniFlowNet}{black}
+		\\[-1.0em]
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_gt_0004_opticalflow_backward_pano.flo_flow_vis.jpg}{0.165}{(g) GT}{black} &
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_dis_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(h) DIS (SEPE)}{black} &
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_our_0.4_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(i) Ours (SEPE)}{black} &
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_pwcnet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(j) PWC-Net (SEPE)}{black} &
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_raft_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(k) RAFT (SEPE)}{black} &
+		\labeledfig{images/of_error/frl_apartment_0_rand_1k_0_omniflownet_0004_opticalflow_backward_pano.flo_error_vis.jpg}{0.165}{(l) OmniFlowNet (SEPE)}{black}
 	\end{tabular}
 	\caption{\label{fig:exp:compflow}%
 		Estimated 360° optical flow and error heatmaps on the Replica 360° dataset:
 		(a) Source image.
-		(b–e) Estimated flow fields.
-		(f) Ground-truth flow.
-		(g–j) SEPE (spherical end-point error) heatmaps (lighter is better).
+		(b–f) Estimated flow fields.
+		(g) Ground-truth flow.
+		(h–l) SEPE (spherical end-point error) heatmaps (lighter is better).
 		Top: \emph{office\_0} scene, line camera motion.
-		Bottom: \emph{apartment\_0} scene, circle camera motion.}
+		Middle: \emph{apartment\_0} scene, circle camera motion.
+		\new{Bottom: \emph{frl\_apartment\_0} scene, random camera motion.}}
 \end{figure*}
 
 
@@ -326,7 +333,7 @@ Our method succeeds where the underlying optical flow method (DIS) fails, while 
 To analyse the performance of 360° optical flow methods on a real-world dataset without ground-truth optical flow, we measure the interpolation error \cite{BakerSLRBS2011}, i.e. the RGB colour difference between the source image and backward-warped target image.
 %
 \Cref{fig:exp:backwardwarp} shows an example result from the OmniPhotos dataset.
-The error maps in \Cref{fig:exp:backwardwarp}(k–n) show less error at the top and bottom of images for our method's result.
+The error maps in \Cref{fig:exp:backwardwarp}(m–q) show less error at the top and bottom of images for our method's result.
 %The OmniPhoto difference is not obvious as the Replica 360°'s because the OmniPhoto is a high frame rate dataset there is less camera motion between the two sequence images.
 The differences between methods is less pronounced than in the Replica 360° dataset, as the baseline between frames is smaller in OmniPhotos due to a higher video frame rate.
 
@@ -334,62 +341,70 @@ The differences between methods is less pronounced than in the Replica 360° dat
 \begin{figure}[hbt!]
 	\centering
 	\begin{tabular}{@{}c*{5}{@{\hspace{-8pt}}c}@{}}
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_0001_rgb_pano.jpg}{0.185}{(a) $I_t$}{white} &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(b) DIS}{black} &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(c) Our}{black} &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(d) PWCNet}{black} &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(e) RAFT}{black}
-%	\\[-1.0em]
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_0002_rgb_pano.jpg}{0.185}{(f) $I_{t+1}$}{black} &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(g) DIS(Warp)}{black} &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(h) Our(Warp)}{black} &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(i) PWCNet(Warp)}{black} &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(j) RAFT(Warp)}{black}
-%	\\[-1.0em]
-%	 &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(k) DIS(Warp)}{black} &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(l) Our(Warp)}{black} &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(m) PWCNet(Warp)}{black} &
-%	\labeledfig{images/of_warp/room_1_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(n) RAFT(Warp)}{black}
-%	\\[-0.9em]
-	\labeledfig{images/of_warp/BeihaiPark_panoramic-0549.jpg}{0.185}{(a) $I_t$}{black} &
-	\labeledfig{images/of_warp/BeihaiPark_dis_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.185}{(b) DIS}{black} &
-	\labeledfig{images/of_warp/BeihaiPark_our_weight_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.185}{(c) Ours}{black} &
-	\labeledfig{images/of_warp/BeihaiPark_pwcnet_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.185}{(d) PWC-Net}{black} &
-	\labeledfig{images/of_warp/BeihaiPark_raft_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.185}{(e) RAFT}{black}
-	\\[-1.0em]
-	\labeledfig{images/of_warp/BeihaiPark_panoramic-0550.jpg}{0.185}{(f) $I_{t+1}$}{black} &
-	\labeledfig{images/of_warp/BeihaiPark_dis_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.185}{(g) DIS (Warp)}{black} &
-	\labeledfig{images/of_warp/BeihaiPark_our_weight_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.185}{(h) Ours (Warp)}{black} &
-	\labeledfig{images/of_warp/BeihaiPark_pwcnet_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.185}{(i) PWC-Net (Warp)}{black} &
-	\labeledfig{images/of_warp/BeihaiPark_raft_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.185}{(j) RAFT (Warp)}{black}
-	\\[-1.0em]
-	&
-	\labeledfig{images/of_warp/BeihaiPark_dis_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.185}{(k) DIS (Warp)}{black} &
-	\labeledfig{images/of_warp/BeihaiPark_our_weight_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.185}{(l) Ours (Warp)}{black} &
-	\labeledfig{images/of_warp/BeihaiPark_pwcnet_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.185}{(m) PWC-Net (Warp)}{black} &
-	\labeledfig{images/of_warp/BeihaiPark_raft_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.185}{(n) RAFT (Warp)}{black}
-\end{tabular}
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_0001_rgb_pano.jpg}{0.185}{(a) $I_t$}{white} &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(b) DIS}{black} &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(c) Our}{black} &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(d) PWCNet}{black} &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_flow_vis.jpg}{0.185}{(e) RAFT}{black}
+		%	\\[-1.0em]
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_0002_rgb_pano.jpg}{0.185}{(f) $I_{t+1}$}{black} &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(g) DIS(Warp)}{black} &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(h) Our(Warp)}{black} &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(i) PWCNet(Warp)}{black} &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_wrap.jpg}{0.185}{(j) RAFT(Warp)}{black}
+		%	\\[-1.0em]
+		%	 &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_dis_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(k) DIS(Warp)}{black} &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_our_weight_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(l) Our(Warp)}{black} &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_pwcnet_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(m) PWCNet(Warp)}{black} &
+		%	\labeledfig{images/of_warp/room_1_circ_1k_0_raft_0002_opticalflow_backward_pano.flo_warp_error_vis.jpg}{0.185}{(n) RAFT(Warp)}{black}
+		%	\\[-0.9em]
+		\labeledfig{images/of_warp/BeihaiPark_panoramic-0549.jpg}{0.165}{(a) $I_t$}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_dis_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.165}{(b) DIS}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_our_weight_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.165}{(c) Ours}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_pwcnet_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.165}{(d) PWC-Net}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_raft_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.165}{(e) RAFT}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_omniflownet_0549_opticalflow_forward_pano.flo_flow_vis.jpg}{0.165}{(f) OmniFlowNet}{black}
+		\\[-1.0em]
+		\labeledfig{images/of_warp/BeihaiPark_panoramic-0550.jpg}{0.165}{(g) $I_{t+1}$}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_dis_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.165}{(h) DIS (Warp)}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_our_weight_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.165}{(i) Ours (Warp)}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_pwcnet_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.165}{(j) PWC-Net (Warp)}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_raft_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.165}{(k) RAFT (Warp)}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_omniflownet_0549_opticalflow_forward_pano.flo_wrap.jpg}{0.165}{(l) OmniFlowNet (Warp)}{black}
+		\\[-1.0em]
+		&
+		\labeledfig{images/of_warp/BeihaiPark_dis_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.165}{(m) DIS (Warp)}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_our_weight_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.165}{(n) Ours (Warp)}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_pwcnet_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.165}{(o) PWC-Net (Warp)}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_raft_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.165}{(p) RAFT (Warp)}{black} &
+		\labeledfig{images/of_warp/BeihaiPark_omniflownet_0549_opticalflow_forward_pano.flo_warp_error_vis.jpg}{0.165}{(q) OmniFlowNet (Warp)}{black} 
+	\end{tabular}
 	\caption{\label{fig:exp:backwardwarp}%
 		Backward warping results on OmniPhotos' \emph{BeihaiPark} scene:
-		(a, f) Source and target images.
-		(b–e) Estimated flow fields.
-		(g–j) Target image (f) warped to the source image (a) using the estimated optical flow (b–e).
-		(k–n) Interpolation error heatmaps (lighter is better).}
+		(a, g) Source and target images.
+		(b–f) Estimated flow fields.
+		(h–l) Target image (g) warped to the source image (a) using the estimated optical flow (b–f).
+		(m–q) Interpolation error heatmaps (lighter is better).}
 \end{figure}
 
 
 \subsection{Ablation Studies}
 \label{sec:ablations}
 
+
 \paragraph{Global Rotation Warping.}
 The multi-step rotation warping aligns image $I_{t+1}$ to $I_t$ by estimating rotation using the ERP and cubemap optical flow.
 The results without ERP optical flow alignment (`w/o ERP') and without cubemap optical flow alignment (`w/o cubemap') are shown in \cref{fig:exp:ablations}.
 %%{analysis result}
-\TODO{update analysis to match results $\to$}
-The `w/o ERP' error is higher than the `w/o cubemap' error for both `\emph{Line}' and `\emph{All}' data,
+%\TODO{update analysis to match results $\to$}
+\new{\MZY{
+In different type camera motion data different rotation gets best performance.
+But `Full method'make most of and balance each term's advantage, to make it get the best performance on `\emph{All}' data.
+}}
+%The `w/o ERP' error is higher than the `w/o cubemap' error for both `\emph{Line}' and `\emph{All}' data,
 %because the ERP optical flow is the global motion, which can handle large pixel motion.
-as the ERP-based rotation estimation better handles large pixel motions.
+%as the ERP-based rotation estimation better handles large pixel motions.
 
 
 \paragraph{Stitch Blending Weight.}
@@ -397,9 +412,10 @@ The blending weight aims to smoothly and consistently stitch the overlap area of
 The result without blending weight is shown as `w/o weight' in \cref{fig:exp:ablations}, which replaces all weights with the unit weight.
 %{analysis result}
 %The $W/oWeight$ get the best performance in $Line$ because the blending weight helps the optical flow stitch to get rid of the error optical flow generated by large pixel motion.
-\TODO{update analysis to match results $\to$}
-Our full method performs best for `\emph{Line}' data as helps the optical flow stitching overcome errors caused by large pixel motion.
-However, `w/o weight' performs slightly better on the complete dataset.
+%\TODO{update analysis to match results $\to$}
+%Our full method performs best for `\emph{Line}' data as helps the optical flow stitching overcome errors caused by large pixel motion.
+%However, `w/o weight' performs slightly better on the complete dataset.
+\new{\MZY{The `Ful Method' outperforms the `w/o weight' because the helps the optical flow stitching weight overcome errors caused by large pixel motion.}}
 
 
 \begin{table}%[h!]
@@ -413,44 +429,64 @@ However, `w/o weight' performs slightly better on the complete dataset.
 		&  Method & ${EPE}\downarrow$ & $AAE\downarrow$ & $RMS\downarrow$ & $SEPE\downarrow$ & ${SAAE}\downarrow$ & ${SRMS}\downarrow$ \\
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{Circle}}}
-%		& Full method  &     4.988 &     0.1885 &     39.26 &     0.007241 &     0.05278 &     0.01824 \\
-%		& w/o weight   & \bf 4.854 & \bf 0.1863 & \bf 37.10 & \bf 0.007118 & \bf 0.05074 &     0.01899 \\
-%		& w/o ERP      &     4.961 &     0.1871 &     38.32 &     0.007165 &     0.05094 &     0.01504 \\
-%		& w/o cubemap  &     4.956 &     0.1881 &     38.22 &     0.007171 &     0.05241 & \bf 0.01451 \\
-		& Full method  &     \new{3.507} &     \new{0.1694} &     \new{34.21} & \bf \new{0.005370} &     \new{0.03480} &     \new{0.01021 } \\ 
+		% & Full method  &     4.988 &     0.1885 &     39.26 &     0.007241 &     0.05278 &     0.01824 \\
+		% & w/o weight   & \bf 4.854 & \bf 0.1863 & \bf 37.10 & \bf 0.007118 & \bf 0.05074 &     0.01899 \\
+		% & w/o ERP      &     4.961 &     0.1871 &     38.32 &     0.007165 &     0.05094 &     0.01504 \\
+		% & w/o cubemap  &     4.956 &     0.1881 &     38.22 &     0.007171 &     0.05241 & \bf 0.01451 \\
+		% & Full method  &     \new{3.507} &     \new{0.1694} &     \new{34.21} & \bf \new{0.005370} &     \new{0.03480} &     \new{0.01021 } \\ 
+		% & w/o weight   &     \new{3.616} &     \new{0.1692} &     \new{34.86} &     \new{0.005405} &     \new{0.03478} &     \new{0.01235 } \\
+		% & w/o ERP      & \bf \new{3.434} & \bf \new{0.1688} & \bf \new{33.81} &     \new{0.005376} & \bf \new{0.03437} &     \new{0.009951} \\ 
+		% & w/o cubemap  &     \new{3.533} &     \new{0.1698} &     \new{34.04} &     \new{0.005399} &     \new{0.03519} & \bf \new{0.009730} \\ 
+		% & w/o ico      &     \new{3.481} &     \new{0.1711} &     \new{30.45} &     \new{0.006040} &     \new{0.03724} &     \new{0.01412 } \\
+		& Full method  &     \new{3.507} &     \new{0.1694} &     \new{34.21} &     \new{0.005370} &     \new{0.03480} &     \new{0.01021 } \\ 
 		& w/o weight   &     \new{3.616} &     \new{0.1692} &     \new{34.86} &     \new{0.005405} &     \new{0.03478} &     \new{0.01235 } \\
-		& w/o ERP      & \bf \new{3.434} & \bf \new{0.1688} & \bf \new{33.81} &     \new{0.005376} & \bf \new{0.03437} &     \new{0.009951} \\ 
-		& w/o cubemap  &     \new{3.533} &     \new{0.1698} &     \new{34.04} &     \new{0.005399} &     \new{0.03519} & \bf \new{0.009730} \\ 
+		& w/o ERP      &     \new{3.434} &     \new{0.1688} &     \new{33.81} &     \new{0.005376} &     \new{0.03437} &     \new{0.009951} \\ 
+		& w/o cubemap  &     \new{3.533} &     \new{0.1698} &     \new{34.04} &     \new{0.005399} &     \new{0.03519} &     \new{0.009730} \\ 
 		& w/o ico      &     \new{3.481} &     \new{0.1711} &     \new{30.45} &     \new{0.006040} &     \new{0.03724} &     \new{0.01412 } \\ 
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{Line}}} 
-%		& Full method  &     10.41 &     0.2461 &     55.78 & \bf 0.01533 &     0.08943 & \bf 0.03448 \\
-%		& w/o weight   & \bf 10.13 &     0.2447 & \bf 48.60 &     0.01600 & \bf 0.08798 &     0.03566 \\
-%		& w/o ERP      &     10.82 & \bf 0.2648 &     56.48 &     0.01580 &     0.09090 &     0.03519 \\
-%		& w/o cubemap  &     10.88 &     0.2484 &     57.61 &     0.01575 &     0.08987 &     0.03535 \\
+		% & Full method  &     10.41 &     0.2461 &     55.78 & \bf 0.01533 &     0.08943 & \bf 0.03448 \\
+		% & w/o weight   & \bf 10.13 &     0.2447 & \bf 48.60 &     0.01600 & \bf 0.08798 &     0.03566 \\
+		% & w/o ERP      &     10.82 & \bf 0.2648 &     56.48 &     0.01580 &     0.09090 &     0.03519 \\
+		% & w/o cubemap  &     10.88 &     0.2484 &     57.61 &     0.01575 &     0.08987 &     0.03535 \\
+		% & Full method  &     \new{5.839} &     \new{0.1971} &     \new{40.74} &     \new{0.01063} &     \new{0.05951} &     \new{0.02098}  \\
+		% & w/o weight   &     \new{5.475} &     \new{0.1960} &     \new{32.36} &     \new{0.01100} & \bf \new{0.05815} &     \new{0.02214}   \\ 
+		% & w/o ERP      &     \new{5.749} & \bf \new{0.1945} &     \new{40.11} &     \new{0.01069} &     \new{0.05881} &     \new{0.02107}  \\ 
+		% & w/o cubemap  &     \new{5.816} &     \new{0.1953} &     \new{40.09} &     \new{0.01075} &     \new{0.05825} &     \new{0.02136}  \\ 
+		% & w/o ico      & \bf \new{4.262} &     \new{0.2042} & \bf \new{26.28} & \bf \new{0.01015} &     \new{0.07242} & \bf \new{0.01818}  \\ 
 		& Full method  &     \new{5.839} &     \new{0.1971} &     \new{40.74} &     \new{0.01063} &     \new{0.05951} &     \new{0.02098}  \\
-		& w/o weight   &     \new{5.475} &     \new{0.1960} &     \new{32.36} &     \new{0.01100} & \bf \new{0.05815} &     \new{0.02214}   \\ 
-		& w/o ERP      &     \new{5.749} & \bf \new{0.1945} &     \new{40.11} &     \new{0.01069} &     \new{0.05881} &     \new{0.02107}  \\ 
+		& w/o weight   &     \new{5.475} &     \new{0.1960} &     \new{32.36} &     \new{0.01100} &     \new{0.05815} &     \new{0.02214}   \\ 
+		& w/o ERP      &     \new{5.749} &     \new{0.1945} &     \new{40.11} &     \new{0.01069} &     \new{0.05881} &     \new{0.02107}  \\ 
 		& w/o cubemap  &     \new{5.816} &     \new{0.1953} &     \new{40.09} &     \new{0.01075} &     \new{0.05825} &     \new{0.02136}  \\ 
-		& w/o ico      & \bf \new{4.262} &     \new{0.2042} & \bf \new{26.28} & \bf \new{0.01015} &     \new{0.07242} & \bf \new{0.01818}  \\ 
+		& w/o ico      &     \new{4.262} &     \new{0.2042} &     \new{26.28} &     \new{0.01015} &     \new{0.07242} &     \new{0.01818}  \\ 
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{Random}}} 
+		% & Full method  &     \new{14.10} &     \new{0.2192} &     \new{59.78} &     \new{0.02717} &     \new{0.08849} &     \new{0.05753} \\
+		% & w/o weight   & \bf \new{13.66} &     \new{0.2176} &     \new{57.87} &     \new{0.02723} &     \new{0.08679} &     \new{0.05684}  \\ 
+		% & w/o ERP      &     \new{15.71} &     \new{0.2211} &     \new{60.81} &     \new{0.03212} &     \new{0.09007} &     \new{0.06161} \\ 
+		% & w/o cubemap  &     \new{13.96} & \bf \new{0.2145} &     \new{58.92} & \bf \new{0.02652} & \bf \new{0.08428} & \bf \new{0.05619} \\ 
+		% & w/o ico      &     \new{14.81} &     \new{0.2490} & \bf \new{57.15} &     \new{0.03389} &     \new{0.1167 } &     \new{0.06173} \\ 
 		& Full method  &     \new{14.10} &     \new{0.2192} &     \new{59.78} &     \new{0.02717} &     \new{0.08849} &     \new{0.05753} \\
-		& w/o weight   & \bf \new{13.66} &     \new{0.2176} &     \new{57.87} &     \new{0.02723} &     \new{0.08679} &     \new{0.05684}  \\ 
+		& w/o weight   &     \new{13.66} &     \new{0.2176} &     \new{57.87} &     \new{0.02723} &     \new{0.08679} &     \new{0.05684}  \\ 
 		& w/o ERP      &     \new{15.71} &     \new{0.2211} &     \new{60.81} &     \new{0.03212} &     \new{0.09007} &     \new{0.06161} \\ 
-		& w/o cubemap  &     \new{13.96} & \bf \new{0.2145} &     \new{58.92} & \bf \new{0.02652} & \bf \new{0.08428} & \bf \new{0.05619} \\ 
-		& w/o ico      &     \new{14.81} &     \new{0.2490} & \bf \new{57.15} &     \new{0.03389} &     \new{0.1167 } &     \new{0.06173} \\ 
+		& w/o cubemap  &     \new{13.96} &     \new{0.2145} &     \new{58.92} &     \new{0.02652} &     \new{0.08428} &     \new{0.05619} \\ 
+		& w/o ico      &     \new{14.81} &     \new{0.2490} &     \new{57.15} &     \new{0.03389} &     \new{0.1167 } &     \new{0.06173} \\ 
 		\midrule
 		\multirow{4}{*}{\rotatebox[origin=c]{90}{\emph{All}}}
-%		& Full method  &     8.602 &     0.2270 &     50.27 &     0.01264 &     0.07722 &     0.02907 \\
-%		& w/o weight   & \bf 7.524 & \bf 0.2130 & \bf 42.94 &     0.01161 & \bf 0.06967 &     0.02741 \\
-%		& w/o ERP      &     7.889 &     0.2260 &     47.40 &     0.01149 &     0.07092 &     0.02512 \\
-%		& w/o cubemap  &     7.921 &     0.2182 &     47.91 & \bf 0.01146 &     0.07114 & \bf 0.02492 \\
-		& Full method  &     \new{7.701} &     \new{0.1946} &     \new{44.62} & \bf \new{0.01411} &     \new{0.06027} & \bf \new{0.02905}   \\
+		% & Full method  &     8.602 &     0.2270 &     50.27 &     0.01264 &     0.07722 &     0.02907 \\
+		% & w/o weight   & \bf 7.524 & \bf 0.2130 & \bf 42.94 &     0.01161 & \bf 0.06967 &     0.02741 \\
+		% & w/o ERP      &     7.889 &     0.2260 &     47.40 &     0.01149 &     0.07092 &     0.02512 \\
+		% & w/o cubemap  &     7.921 &     0.2182 &     47.91 & \bf 0.01146 &     0.07114 & \bf 0.02492 \\
+		% & Full method  &     \new{7.701} &     \new{0.1946} &     \new{44.62} & \bf \new{0.01411} &     \new{0.06027} & \bf \new{0.02905}   \\
+		% & w/o weight   &     \new{7.585} &     \new{0.1942} &     \new{41.70} &     \new{0.01455} &     \new{0.05991} &     \new{0.03045}  \\
+		% & w/o ERP      &     \new{8.298} &     \new{0.1948} &     \new{44.91} &     \new{0.01606} &     \new{0.06109} &     \new{0.03088} \\
+		% & w/o cubemap  &     \new{7.771} & \bf \new{0.1932} &     \new{44.35} &     \new{0.01422} & \bf \new{0.05924} &     \new{0.02909} \\
+		% & w/o ico      & \bf \new{7.519} &     \new{0.2081} & \bf \new{37.96} &     \new{0.01670} &     \new{0.07547} &     \new{0.03134} \\ 
+		& Full method  &     \new{7.701} &     \new{0.1946} &     \new{44.62} &     \new{0.01411} &     \new{0.06027} &     \new{0.02905}   \\
 		& w/o weight   &     \new{7.585} &     \new{0.1942} &     \new{41.70} &     \new{0.01455} &     \new{0.05991} &     \new{0.03045}  \\
 		& w/o ERP      &     \new{8.298} &     \new{0.1948} &     \new{44.91} &     \new{0.01606} &     \new{0.06109} &     \new{0.03088} \\
-		& w/o cubemap  &     \new{7.771} & \bf \new{0.1932} &     \new{44.35} &     \new{0.01422} & \bf \new{0.05924} &     \new{0.02909} \\
-		& w/o ico      & \bf \new{7.519} &     \new{0.2081} & \bf \new{37.96} &     \new{0.01670} &     \new{0.07547} &     \new{0.03134} \\ 
+		& w/o cubemap  &     \new{7.771} &     \new{0.1932} &     \new{44.35} &     \new{0.01422} &     \new{0.05924} &     \new{0.02909} \\
+		& w/o ico      &     \new{7.519} &     \new{0.2081} &     \new{37.96} &     \new{0.01670} &     \new{0.07547} &     \new{0.03134} \\ 
 		\bottomrule
 	\end{tabular}}%
 \end{table}%\vspace{-2em}
